# GMA_V3

./: .gitignore  ALL_BUILD.vcxproj  CLAUDE.md  CMakeLists.txt  DELIVERABLES.md  Dockerfile  GMA_V3.sln  README.md  ZERO_CHECK.vcxproj  gma.vcxproj  gma_server.vcxproj
benchmarks/: AtomicFunctionsBench.cpp  AtomicStoreBench.cpp  DispatcherBench.cpp  ThreadPoolBench.cpp  WindowNodesBench.cpp
connectors/market/include/gma/: AtomicFunctions.hpp  MarketTA.hpp  OrderBookManager.hpp  SymbolHistory.hpp
connectors/market/src/: MarketConnector.cpp  MarketIngress.cpp  MarketTA.cpp
connectors/market/src/book/: OrderBookManager.cpp
connectors/market/src/feed/: IFeedAdapter.cpp  ItchAdapter.cpp
connectors/market/src/ob/: ObKey.cpp  ObMaterializer.cpp  ObProvider.cpp
connectors/synthetic/src/: SyntheticConnector.cpp
docs/: ARCHITECTURE.md  CONNECTOR_REFACTOR.md  atomic-keys.md  feed-adapters.md  window-nodes.md  writing-adapters.md
include/gma/: AtomicFunctions.hpp  AtomicStore.hpp  ClientConnection.hpp  Config.hpp  Dispatcher.hpp  Event.hpp  ExecutionContext.hpp  FunctionMap.hpp  FunctionRegistry.hpp  JsonValidator.hpp  Logger.hpp  MarketDispatcher.hpp  Metrics.hpp  NodeRegistry.hpp  RequestRegistry.hpp  Result.hpp  SourceProfile.hpp  Span.hpp  StreamValue.hpp  SymbolHistory.hpp  SymbolTick.hpp  SymbolValue.hpp  ThreadPool.hpp  TreeBuilder.hpp
include/gma/atomic/: AtomicProveiderRegistry.hpp  AtomicProviderRegistry.hpp
include/gma/book/: OrderBook.hpp  OrderBookManager.hpp
include/gma/engine/: ConfigNamespaceRegistry.hpp  EngineRegistries.hpp  EventComputerRegistry.hpp  EventTypeRegistry.hpp  IConnector.hpp  IEventComputer.hpp  IngressRegistry.hpp  NodeTypeRegistry.hpp  Registries.hpp
include/gma/forum/: ConnectorsClient.hpp
include/gma/nodes/: Aggregate.hpp  AtomicAccessor.hpp  BucketTime.hpp  GroupSplit.hpp  INode.hpp  Interval.hpp  Listener.hpp  Responder.hpp  SymbolSplit.hpp  TumblingWindow.hpp  VectorReducer.hpp  Worker.hpp
include/gma/ob/: ObEngine.hpp  ObMaterializer.hpp  ObProvider.hpp  ObSnapshot.hpp
include/gma/rt/: SPSCQueue.hpp  ThreadPool.hpp
include/gma/runtime/: IStoppable.hpp  ShutdownCoordinator.hpp
include/gma/server/: ClientSession.hpp  FeedServer.hpp  RequestKey.hpp  WebSocketServer.hpp
include/gma/ta/: AtomicNames.hpp  Indicators.hpp  TAComputer.hpp
include/gma/util/: Config.hpp  JsonUtil.hpp  Logger.hpp  Metrics.hpp
include/gma/ws/: ClientConnection.hpp  JsonSchema.hpp  RequestRegistry.hpp  WSResponder.hpp  WsBridge.hpp  WsFeedClient.hpp
specs/2026-05-01-atomic-keys-doc/: SPEC.md
specs/2026-05-01-ingress-real/: SPEC.md
specs/2026-05-01-market-field-map/: NOTES.md  SPEC.md
specs/2026-05-01-validator-open-vocab/: SPEC.md
specs/2026-05-01-ws-e2e/: SPEC.md
specs/2026-05-06-ob-keys-pipeline-only/: NOTES.md  PLAN.md  SPEC.md
specs/2026-05-08-gma-string-id-subscriptions/: LINEAR.md  NOTES.md  PLAN.md  SPEC.md
specs/2026-05-12-gma-window-nodes/: LINEAR.md  NOTES.md  PLAN.md  SPEC.md
src/: main.cpp
src/book/: OrderBook.cpp  OrderBookManager.cpp
src/core/: AtomicFunctions.cpp  AtomicStore.cpp  BuiltinFunctions.cpp  ClientConnection.cpp  Dispatcher.cpp  FunctionMap.cpp  JsonValidator.cpp  MarketDispatcher.cpp  OrderBookManager.cpp  RequestRegistry.cpp  ThreadPool.cpp  TreeBuilder.cpp
src/forum/: ConnectorsClient.cpp
src/nodes/: Aggregate.cpp  AtomicAccessor.cpp  BucketTime.cpp  GroupSplit.cpp  Interval.cpp  Listener.cpp  Responder.cpp  SymbolSplit.cpp  TumblingWindow.cpp  VectorReducer.cpp  Worker.cpp
src/ob/: ObEngine.cpp  ObKey.cpp  ObMaterializer.cpp  ObProvider.cpp
src/rt/: ThreadPool.cpp
src/server/: ClientSession.cpp  FeedServer.cpp  WebSocketServer.cpp
src/ta/: TAComputer.cpp
src/util/: Config.cpp  Logger.cpp  Metrics.cpp  gma.conf  gma.json
src/ws/: ClientConnection.cpp  RequestRegistry.cpp  WSResponder.cpp  WsBridge.cpp  WsFeedClient.cpp
tests/: CMakeLists.txt  test_bootstrap.cpp
tests/book/: OrderBookTest.cpp
tests/connection/: CMakeLists.txt  ConnectionTest.cpp
tests/connectors/: MarketFieldMapTest.cpp  SyntheticConnectorTest.cpp
tests/context/: CMakeLists.txt  ContextTest.cpp
tests/core/: AtomicFunctionsTest.cpp  AtomicStoreCapsTest.cpp  AtomicStoreTest.cpp  CMakeLists.txt  ConfigNamespaceDispatchTest.cpp  ConfigTest.cpp  IndicatorsTest.cpp  LoggerTest.cpp  TAComputerTest.cpp  ThreadPoolTest.cpp
tests/dispatch/: CMakeLists.txt  DispatchTest.cpp
tests/engine/: ConnectorLifecycleTest.cpp  EngineRegistriesShapeTest.cpp  EventComputerCacheTest.cpp  IngressFactoryDispatchTest.cpp  RegistriesTest.cpp
tests/feed/: FeedEventDispatchTest.cpp  GapFixesTest.cpp  ItchAdapterTest.cpp  SourceProfileTest.cpp
tests/forum/: ConnectorsClientTest.cpp
tests/integration/: CMakeLists.txt  Enc101CanonicalPatternTest.cpp  IntegrationTest.cpp  StressTest.cpp
tests/mapping/: CMakeLists.txt  FunctionMapTest.cpp
tests/nodes/: AggregateTest.cpp  AtomicAccessorTest.cpp  BucketTimeTest.cpp  CMakeLists.txt  GroupSplitTest.cpp  IntervalTest.cpp  ListenerTest.cpp  ResponderTest.cpp  SymbolSplitTest.cpp  TumblingWindowTest.cpp  VectorReducerTest.cpp  WindowReducerCompositionTest.cpp  WorkerTest.cpp
tests/ob/: ObKeyTest.cpp  ObMaterializerTest.cpp  ObProviderTest.cpp
tests/registry/: CMakeLists.txt  RegistryTest.cpp
tests/server/: RequestKeyHashTest.cpp
tests/treebuilder/: CMakeLists.txt  CorpusTest.cpp  TreeBuilderTest.cpp  corpus_requests.json
tests/validation/: CMakeLists.txt  ValidationTest.cpp
tests/ws/: ClientSessionTest.cpp  WSResponderTest.cpp  WebSocketE2ETest.cpp  WsBridgeTest.cpp
tools/: atomic_map.py  compile.sh  dispatcher_map.py  node_map.py  repo_inventory.sh  todo_scan.py  ws_contract_map.py
tools/feed-sim/: README.md  index.js
tools/nl-tree/: corpus.json  corpus.py  corpus_requests.json  corpus_ws_messages.json  examples.py  export_corpus.py  nl_tree.py  schema.py  test_validator.py  validate_corpus.py
tools/nl-tree/output/: test_001.json  test_002.json
tools/smoke-test/: README.md  SMOKE_RUN_LOG.md  feed-inject.js  package-lock.json  smoke.js  string-id-probe.js
(+18 files in other folders)
